Made footer visible in medium view (fixes #4867)

--- a/src/theme-base/sass/includes/_default-small-medium-screen.scss
+++ b/src/theme-base/sass/includes/_default-small-medium-screen.scss
@@ -331,14 +331,6 @@ table {
 	@extend %base-default-small-medium-screen-display-none-important;
 }
 
-#wb-foot {
-	@extend %base-default-small-medium-screen-display-none;
-}
-
-#base-fullft {
-	@extend %base-default-small-medium-screen-display-none;
-}
-
 #base-bnr {
 	background: #CF3F0E;
 }
