--- a/src/theme-gcwu-fegc/sass/includes/_default-small-medium-screen.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-small-medium-screen.scss
@@ -365,14 +365,6 @@ table {
 	@extend %gcwu-default-small-medium-screen-display-none-important;
 }
 
-#wb-foot {
-	@extend %gcwu-default-small-medium-screen-display-none;
-}
-
-#gcwu-gcft {
-	@extend %gcwu-default-small-medium-screen-display-none;
-}
-
 #gcwu-bnr {
 	background: #225C96;
 }
