--- a/src/theme-ogpl/sass/includes/_default-medium-screen.scss
+++ b/src/theme-ogpl/sass/includes/_default-medium-screen.scss
@@ -6,6 +6,13 @@
 	display: block;
 }
 
+#ogpl-sft {
+	float: left;
+	padding: 0 15px 20px;
+	width: 100%;
+	text-shadow: none;
+}
+
 #jqm-wb-mb {
 	#ogpl-bc-in {
 		display: none;
