--- a/src/theme-wet-boew/sass/includes/_default-medium-screen.scss
+++ b/src/theme-wet-boew/sass/includes/_default-medium-screen.scss
@@ -6,6 +6,12 @@
 	display: block;
 }
 
+#wet-sft {
+	float: left;
+	padding: 0 15px;
+	width: 100%;
+}
+
 #jqm-wb-mb {
 	#wet-bc-in {
 		display: none;
