--- a/src/theme-wet-boew/sass/includes/_default-small-screen.scss
+++ b/src/theme-wet-boew/sass/includes/_default-small-screen.scss
@@ -2,3 +2,14 @@
  * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
  * wet-boew.github.io/wet-boew/License-eng.html / wet-boew.github.io/wet-boew/Licence-fra.html
  */
+%wet-default-small-screen-display-none {
+	display: none;
+}
+
+#wb-foot {
+	@extend %wet-default-small-screen-display-none;
+}
+
+#wet-fullft {
+	@extend %wet-default-small-screen-display-none;
+}
